Fix contact us page rendering on mobile

--- a/src/index.less
+++ b/src/index.less
@@ -414,6 +414,14 @@ article {
     }
 }
 @media all and ( min-width: 720px ) {
+    .body--stroke-contact {
+        section {
+            padding: 0 50px 20px;
+            img {
+                height: 200px;
+            }
+        }
+    }
     .toc h2 {
         font-size: 1.1em;
     }
@@ -447,11 +455,10 @@ article {
         display: none;
     }
     section {
-        padding: 0 50px 20px;
         text-align: center;
         img {
             width: auto;
-            height: 200px;
+            height: 150px;
         }
     }
 }
